# osm-way-width

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
data/: width_points.csv  width_segments.csv  width_summary.json
data/.matplotlib/: fontlist-v390.json
data/polylines/: 08bfc980-2b92-4d16-b3fe-f898b47e6062.json  0c14b23e-2e1c-4be6-bc8a-72a51b7fa252.json  0d1d9466-6642-46b4-8d6e-70a8bf4b1137.json  10de962e-1352-4c99-9df7-5e9385c129d9.json  1133c3ff-d8b2-401f-babc-d02f3dbcda68.json  12f96185-5e6c-4605-9d2a-ab7bdcd48d0a.json  167e5f68-9c77-464c-86e3-dbdec4a1f384.json  1bc7b975-63ad-4090-965d-9c1b445a35dc.json  1fd3b229-b6cb-4a30-8204-8e43b9f92ed1.json  243edb2c-9313-4b51-9e40-bb8d6ef9df15.json  26c213e1-756f-4e91-becc-1f6541132485.json  27b85f15-a319-4f27-93ee-c443853879e3.json  27e1f8b3-f5ed-4496-8033-d9b492911a8d.json  2989c369-963c-4973-87b1-b4b36ae8ff23.json  2a2f238b-ee00-4d77-bb18-96e348fde3bf.json  2c98d0f8-2860-4aed-b636-39bd67041cab.json  31660c66-a3e0-4480-ae1e-8a26cf6e6daf.json  37f3d55c-3143-43e7-9710-e28d7adae01a.json  470feb93-f92a-4299-9756-020c3659b958.json  51190b54-26d8-427c-85a3-8e7190646d85.json  5a934c6f-0ff7-4423-ab3b-df128ded9f8d.json  61463b25-49d8-4db7-aa4f-80e57aa5b7f3.json  628b23a1-f392-447b-ac34-e7f8fbec26cc.json  63557afa-a8d6-483b-a8a4-dfdcfe46ccdd.json  (+65 more)
osm/: times-city.poly
scripts/: estimate_way_width.py  extract_way_segment.py  segment_way_width.py  way_width_utils.py
tests/: test_estimate_way_width.py  test_segment_way_width.py  test_way_width_utils.py
