[project]
name = "osm-way-width"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyproj",
    "shapely",
    "numpy",
    "polyline",
    "matplotlib",
    "contextily",
    "defusedxml>=0.7.1",
]

[tool.uv]
package = false


[tool.ruff]
line-length = 99
target-version = "py311"


[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RET", "S"]
ignore = ["E501", "B008", "S101"]


[tool.ruff.format]
quote-style = "double"


[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "contextily.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "types-defusedxml>=0.7.0.20260504",
    "types-shapely>=2.1.0.20260630",
]
